# rent_games

./: .gitignore  .pylintrc  dev_requirements.txt  pyproject.toml  readme.md
.github/workflows/: codeql.yml  greeting.yml  pylint.yml
backend/: app.py  config.py
backend/auth/: auth.py  db.py  manager.py  schemas.py
backend/crud/: __init__.py  carts.py  games.py  payment.py
backend/integrations/telegram/: tg.py
backend/models/: __init__.py  base.py  carts.py  games.py  payment.py  users.py
backend/rout/: games.py
backend/routers/: carts.py  games.py  order.py  payment.py
backend/schemas/: __init__.py  carts.py  games.py  orders.py  payment.py  users.py
database/: crud.py  models.py  schemas.py
database/engine/: config.py  engine.py
docker/: backend.dockerfile  compose.yml  frontend.dockerfile
frontend/: all_games.py  app.py  auth.py  cart.py  detail_game.py  register.py
migrations/: env.py
migrations/versions/: 2024_07_16_2146-d95c9ee33012_create_user.py  2024_07_17_2229-ccc2671e4ad8_create_type.py  2024_07_17_2230-0f097bdd7ed5_create_game.py  2024_07_17_2230-e1fe905a0535_create_cart.py  2024_07_20_1133-7618aeab8db2_del_games_relationship.py  2024_07_20_1142-f9a0650747f5_add_games_relationship.py  2024_07_20_1148-1a2d7db4763a_fix_games_relationship.py  2024_07_20_1148-3eb43506cde7_fix_games_relationship.py  2024_07_20_1604-e5bc0bac5564_update_carts.py  2024_07_20_1707-1945fcec8978_add_telegram_column.py  2024_07_20_1743-ad833117d40b_add_telegram_chat_column.py  2024_07_21_1706-395e0a3337ee_add_cart.py  2024_07_21_1716-37c0ce24dca5_fix_cart.py  (+13 more)
(+8 files in other folders)
